--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\desarrollo\\AppData\\Roaming\\NetBeans\\11.3\\build.properties
+user.properties.file=/home/desarrollo/.netbeans/11.1/build.properties
