--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=/home/desarrollo/.netbeans/11.1/build.properties
+user.properties.file=C:\\Users\\desarrollo\\AppData\\Roaming\\NetBeans\\11.3\\build.properties
