--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -58,7 +58,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
-javadoc.html5=false
+javadoc.html5=true
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -66,7 +66,7 @@ javadoc.private=false
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
-javadoc.windowtitle=
+javadoc.windowtitle=ZAPATERIA
 # The jlink additional root modules to resolve
 jlink.additionalmodules=
 # The jlink additional command line parameters
@@ -77,7 +77,7 @@ main.class=zapateria.Zapateria
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_14
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
